# claude-code-proxy

./: .dockerignore  .env.example  .gitignore  .mcp.json  BINARY_PACKAGING.md  CHANGELOG.md  CLAUDE.md  QUICKSTART.md  README.md  docker-compose.yml  install.sh  install_tui.py  modelPricing.html  pyproject.toml  requirements.txt
.github/workflows/: nebius-selftest.yml
.playwright-mcp/: page-2026-05-22T21-03-39-029Z.yml  page-2026-05-22T21-04-52-211Z.yml  page-2026-05-22T21-08-29-331Z.yml
MCP/: README.md
MCP/macoscontrol-mcp/: README.md  pyproject.toml  run.sh  server.py
contrib/: claude-code-proxy.plist.example
docs/: ARCHITECTURE.md  BINARY_PACKAGING.md  DASHBOARD_REVAMP_PRD.md  MANUAL_SETUP.md  MCP_SERVER_GUIDE.md  OBSERVABILITY.md  README.md  SHELL_FUNCTION.md  SPECS.md  STARTING_PROXY.md  TOOL_CALL_FORMAT.md  start-proxy.md
docs/codex/: CODEX_STATUSLINE.md
scripts/: debug_routing.py  session_forwarder.py
scripts/claude-code/: README.md  _models_helper.py  models.md
scripts/install_ui/: __init__.py  screens.py  styles.css  utils.py
src/: main.py
src/api/: endpoints.py  optimization_handlers.py
src/codex/: models.py  request_converter.py  response_converter.py  session.py  stream_converter.py  tools_compat.py
src/core/: client.py  (+4 more)
tests/: test_computer_use.py  test_context_retrim.py  test_image_routing.py  test_main.py  test_mcp_config.py  test_model_aliases.py  test_models_listing.py  test_observability.py  test_request_converter.py  test_request_optimizations.py  test_response_converter.py  test_server_tools.py  test_session_forwarder.py
(+18 files in other folders)
