[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "macoscontrol-mcp"
version = "1.0.0"
description = "macOS Control MCP server — local screen control for Claude Code via any model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pyautogui>=0.9.54",
    "Pillow>=10.0.0",
    "mss>=9.0.0",
]

[project.scripts]
macoscontrol-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
